--- a/style.css
+++ b/style.css
@@ -15,9 +15,32 @@
   --fw-regular: 400;
   --fw-semi-bold: 500;
   --fw-bold: 700;
+
+  --fs-300: 0.8125rem;
+  --fs-400: 0.875 rem;;
+  --fs-500: 0.9375rem;
+  --fs-600: 1rem;
+  --fs-700: 1.875rem;
+  --fs-800: 2.5rem;
+  --fs-900: 3.5rem;
+
+  --fs-body: var(--fs-400);
+  --fs-primary-heading: var(--fs-800);
+  --fs-secondary-heading: var(--fs-700);
+  --fs-nav: var(--fs-500);
+  --fs-button: var(--fs-300);
 }
 
+@media (min-width: 50em) {
+  :root {
+    --fs-700: 3.5rem;
+    --fs-600: 2rem;
 
+    --fs-body: var(--fs-500);
+    --fs-nav: var(--fs-300);
+    --fs-button: var(--fs-300);
+  }
+}
 
 
 
